# LinuxStuff

./: .gitignore  CMakeLists.txt
PosixIpc/: CMakeLists.txt
PosixIpc/src/: client.cc  ipc1.c
allocators/: alloc.c  slab.c
include/: sconf.h  shared.h
ipc/include/: sconf.h
ipc/src/: ipc2.c  server.c  server.cc
mmu/: translation_addr.c
paging/: Makefile  link.ld  run.sh
paging/include/: multiboot.h
paging/src/: bootstrap.s
riscv/: common.c  common.h  kernel.c  kernel.h  kernel.ld  process_control_block.h  run.sh  shell.c  user.c  user.h  user.ld  utils.c
src/: client.c  client.cc  ipc1.c  ipc2.c  perl.txt  server.cc  test.txt
tlpi-dist/acl/: acl_update  acl_view
tlpi-dist/altio/: demo_sigio  epoll_flags_fork  epoll_input  multithread_epoll_wait  poll_pipes  select_mq  self_pipe  t_select
tlpi-dist/cap/: cap_launcher  cap_text  check_password_caps  demo_file_caps  show_secbits  t_cap_get_file  t_cap_get_pid  t_cap_set_file
tlpi-dist/cgroups/: alloc_mem  fork_bomb
tlpi-dist/daemons/: daemon_SIGHUP  t_syslog  test_become_daemon
tlpi-dist/dirs_links/: bad_symlink  file_type_stats  list_files  list_files_readdir_r  nftw_dir_tree  t_dirbasename  t_unlink  view_symlink
tlpi-dist/filebuff/: direct_read  mix23_linebuff  mix23io  write_bytes  write_bytes_fdatasync  write_bytes_fsync  write_bytes_o_sync
tlpi-dist/fileio/: atomic_append  bad_exclusive_open  copy  large_file  multi_descriptors  seek_io  t_readv  t_truncate
tlpi-dist/filelock/: i_fcntl_locking  t_flock
tlpi-dist/files/: chiflag  t_chown  t_stat  t_umask  t_utime  t_utimes
tlpi-dist/filesys/: t_mount  t_statfs  t_statvfs  t_umount
tlpi-dist/getopt/: t_getopt
tlpi-dist/inotify/: demo_inotify  dnotify  inotify_dtree  rand_dtree
tlpi-dist/loginacct/: dump_utmpx  utmpx_login  view_lastlog
tlpi-dist/memalloc/: free_and_sbrk
tlpi-dist/mmap/: anon_mmap  mmcat  mmcopy  t_mmap  t_remap_file_pages
tlpi-dist/pgsjc/: catch_SIGHUP  disc_SIGHUP  handling_SIGTSTP  job_mon  orphaned_pgrp_SIGHUP  t_setsid
tlpi-dist/pipes/: change_case  fifo_seqnum_client  fifo_seqnum_server  pipe_ls_wc  pipe_sync  popen_glob  simple_pipe
tlpi-dist/pmsg/: mq_notify_sig  mq_notify_sigwaitinfo  mq_notify_thread  mq_notify_via_signal  mq_notify_via_thread  pmsg_create  pmsg_getattr  pmsg_receive  pmsg_send  pmsg_unlink
tlpi-dist/proc/: bad_longjmp  display_env  longjmp  modify_env  necho  setjmp_vars  t_getenv
(+179 files in other folders)
